# sitepod

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.coolify  LICENSE  Makefile  README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  test-auth-endpoints.sh  test-e2e.sh
.github/workflows/: ci.yml  deploy-www.yml  release.yml
cli/: Cargo.toml
cli/src/: config.rs  hash.rs  main.rs  scanner.rs  ui.rs  update.rs
cli/src/api/: auth.rs  deploy.rs  domain.rs  mod.rs  query.rs  types.rs
cli/src/commands/: bind.rs  console.rs  delete_account.rs  deploy.rs  domain.rs  helpers.rs  history.rs  init.rs  login.rs  mod.rs  preview.rs  rollback.rs
console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: App.svelte  app.css  main.ts
docs/: brand.md  deploy-coolify.md  deploy-topology.md  deploy-vps.md  development.md  npm-publish.md  ops.en.md  ops.md  prd.md  roadmap.md  storage-backends.md  tdd.md  user-stories.md
examples/: README.md
examples/binary-assets/: sitepod.toml
examples/duplicate-content/: sitepod.toml
examples/large-files/: sitepod.toml
examples/many-files/: sitepod.toml
examples/nested-deep/: sitepod.toml
examples/simple-site/: README.md  sitepod.toml
examples/spa-site/: sitepod.toml
examples/special-chars/: sitepod.toml
scripts/: demo-60s.sh  sync-versions.sh
server/: Caddyfile  Caddyfile.local  build-caddy.sh  config.example.toml  docker-entrypoint.sh  go.mod  go.sum
www/: astro.config.mjs  package-lock.json  sitepod.toml
(+93 files in other folders)
