[package]
name = "sitepod"
version = "0.2.2"
edition = "2021"
description = "CLI for SitePod - Self-hosted static releases"
license = "MIT"
repository = "https://github.com/sitepod-dev/sitepod"

[[bin]]
name = "sitepod"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing
blake3 = "1.5"
sha2 = "0.10"
base64 = "0.21"

# File handling
glob = "0.3"
walkdir = "2.4"
mime_guess = "2.0"

# Progress bars and terminal UI
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
rand = "0.8"
url = "2.5"
open = "5.0"
qrcode = "0.13"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
